[package]
description = "Implementation of the Starknet OS based on Cairo native"
edition = "2021"
name = "hanabi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-native = { git = "https://github.com/lambdaclass/cairo_native.git" }
